
#  This file is part of gnu-pw-mgr.
#
#  Copyright (C) 2013-2018 Bruce Korb - all rights reserved
#
#  gnu-pw-mgr is free software: you can redistribute it and/or modify it
#  under the terms of the GNU General Public License as published by the
#  Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  gnu-pw-mgr is distributed in the hope that it will be useful, but
#  WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#  See the GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with this program.  If not, see <http://www.gnu.org/licenses/>.

ACLOCAL_AMFLAGS     = -I m4
SUBDIRS             = lib libopts src doc tests
DIST_SUBDIRS        = $(SUBDIRS)
LIBTOOLIZE_ARGS	    = --copy --force
AUTOMAKE_ARGS  	    = --add-missing --copy
EXTRA_DIST          = m4/gnulib-cache.m4 .tarball-version \
	bootstrap bootstrap.conf bootstrap.std build-aux \
	add-on
